policies/tests/require-security-context/resource-fail.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: insecure-pod
  namespace: tenant-alpha
spec:
  containers:
    - name: app
      image: "harbor.sre.internal/alpha/my-app:v1.0.0"
